<resources>
    <string name="app_name">快轮智能</string>
    <!--main page-->
    <string name="device">设备</string>
    <string name="album">相册</string>
    <string name="my">我的</string>
    <!--device page-->
    <string name="fast_wheel">快轮</string>
    <string name="connect_your_device">连接你的设备</string>
    <string name="connect_device">连接设备</string>
    <string name="connect_Connected">已连接</string>
    <string name="learn_more">了解更多</string>
    <string name="fast_wheel_en">kuickwheel</string>

    <!--camera-->
    <string name="exit">退出</string>

    <!--Activity标题，需要大写-->
    <string name="Album">相册</string>
    <string name="Camera">相机</string>
    <string name="Edit">编辑</string>
    <string name="Setting">设置</string>
    <string name="YunnanSetting">云台设置</string>
    <string name="CameraSettings">相机设置</string>
    <string name="FirmwareUpdate">固件升级</string>
    <string name="Login">登陆</string>
    <string name="Register">注册</string>
    <string name="Language">语言</string>
    <string name="Unit">单位</string>
    <string name="About">关于</string>
    <string name="PhotoSize">照片分辨率</string>
    <string name="VideoSize">视频分辨率</string>
    <string name="FlashLamp">闪光灯</string>
    <string name="GridLines">网格</string>
    <string name="ResetCamer">恢复</string>
    <string name="On">打开</string>
    <string name="Close">关闭</string>
    <string name="Auto">自动</string>
    <string name="ResetCamerSettings">是否要恢复到相机默认设置?</string>
    <string name="confirm">确认</string>

    <!--account-->
    <string name="account_input_email">输入邮箱地址</string>
    <string name="account_input_pwd">输入密码</string>
    <string name="account_login">登陆</string>
    <string name="account_register_account">注册账号</string>
    <string name="account_forget_pwd_q">忘记密码？</string>
    <string name="account_forget_pwd">忘记密码</string>
    <string name="account_other_login">其他登陆</string>
    <string name="next_step">下一步</string>
    <string name="account_input_captcha">输入验证码</string>
    <string name="account_error_code">验证码不正确！</string>
    <string name="account_register">注册</string>
    <string name="account_input_new_pwd">输入新密码</string>
    <string name="account_input_pwd_again">再次输入密码</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <!--退出时AlertDialog-->
    <string name="Exit_current_account">退出当前账号</string>
    <string name="Sure_you_want_to_exit">确定要退出 ?</string>
    <string name="Sure">确认</string>
    <string name="Cancle">取消</string>
    <string name="my_scan_qr_code_get_client">扫描二维码下载客户端</string>
    <string name="check_update">检查更新</string>
    <string name="Version">Version</string>
    <string name="language">语言</string>
    <string name="clean_cache">清理缓存</string>
    <string name="unit">单位</string>
    <string name="miles">Miles</string>
    <string name="km">Km</string>
    <string name="metric">公制 Km</string>
    <string name="imperial">英制 Miles</string>
    <string name="language_en">English</string>
    <string name="language_zh_cn">中文(简体)</string>
    <string name="nickname">昵称</string>
    <string name="input_nick_name">输入昵称</string>
    <string name="Icon">图像</string>
    <string name="personal_info">个人信息</string>
    <string name="nickname_empty">昵称不能为空！</string>
    <string name="Please_Login">请登陆！</string>
    <!--bluetooth-->

    <string name="enter_camera">进入相机</string>
    <string name="bluetooth">蓝牙</string>
    <string name="device_name">设备名称</string>
    <string name="connect">连接</string>
    <string name="Connected">连接成功</string>

    <!--云台摄像机-->
    <string name="single_photo">单拍</string>
    <string name="pan_photo">全景</string>
    <string name="long_exposure">长曝光</string>
    <!--相机设置-->
    <string name="photo">相机</string>
    <string name="cloud_deck">云台</string>
    <string name="firmware_upgrade">固件升级</string>

    <!--相册多选界面-->
    <string name="Selected__">选中</string>
    <string name="term">项</string>


    <!--云台设置界面-->
    <string name="GeneralSetting">通用</string>
    <string name="PitchAxis">俯仰轴锁定</string>
    <string name="OperatingLeverSpeed">遥感响应速度</string>
    <string name="OperatingLeverDirection">遥感应方向</string>
    <string name="ReverseTranslation">反向平移</string>
    <string name="ReversePitch">反向俯仰</string>
    <string name="Calibrate">校准</string>
    <string name="CalibrateHorizon">水平校准</string>
    <string name="AutoCalibration">自动校准</string>
    <string name="ResetGimbal">恢复云台出厂设置</string>

    <string name="fast">快</string>
    <string name="medium">中</string>
    <string name="slow">慢</string>
    <string name="HorizontalVertical">水平垂直</string>
    <string name="FreeOrientation">自由方向</string>
    <string name="start">开始校正</string>
    <string name="reset">恢复</string>
    <string name="HardwareVersion">硬件版本:</string>
    <string name="SoftwareVersion">软件版本:</string>
    <string name="UpdateFirmware">升级固件</string>


    <string name="FirmwareDownload">云台固件下载</string>
    <string name="Download">下载</string>
    <string name="VersionUpdateReminder">版本更新提醒</string>
    <string name="Later">稍后再说</string>
    <string name="UpdateNow">立刻更新</string>
    <string name="CheckNewVersion">检查到云台软件有新版本!</string>
    <string name="cancel">取消</string>

    <string name="update">固件升级中...</string>
    <string name="update_ota">更新</string>
    <string name="Firmware_has_new_version">固件有新版本</string>
    <string name="Whether_to_clear_the_cache">是否清除缓存？</string>
    <string name="Panorama_mode">全景模式</string>
    <string name="Single_shot_mode">单拍模式</string>
    <string name="The_latest_version">当前已是最新版本</string>
    <string name="Turn_off_delay_shooting">关闭延时</string>
   <!-- <string name="s1">2秒</string>
    <string name="s2">5秒</string>
    <string name="s3">10秒</string>
    <string name="degree1">180度</string>
    <string name="degree2">330度</string>-->
    <string name="s1">2s</string>
    <string name="s2">5s</string>
    <string name="s3">10s</string>
    <string name="degree1">180°</string>
    <string name="degree2">330°</string>
    <string name="rectangle">矩形</string>
    <string name="Panorama_mode_exit">结束拍照</string>


</resources>
