<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vlusi.klintelligent.fragments.DeviceFragment">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="48dp">


        <RelativeLayout
            android:id="@+id/Selection_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/Camera"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_main" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Album"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/spacing_small"
                android:text="@string/Edit"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_main"
                android:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/line_gray"></View>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>


    <com.tonicartos.widget.stickygridheaders.StickyGridHeadersGridView
        android:id="@+id/asset_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:clipToPadding="false"
        android:columnWidth="90dip"
        android:horizontalSpacing="3dip"
        android:numColumns="auto_fit"
        android:verticalSpacing="3dip" />





</LinearLayout>
